# arxivterminal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
arxivterminal/: cli.py  constants.py  db.py  download.py  fetch.py  ml.py  models.py  output.py
tests/: test_db.py  test_download.py  test_ml.py  test_output.py
