[tool.poetry]
name = "arxivterminal"
version = "0.1.0"
description = "An application for summarizing Arxiv results within the terminal"
authors = ["John Bencina <jbencina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
bs4 = "^0.0.1"
openai = "^0.27.4"
lxml = "^4.9.2"
pydantic = "^1.10.7"
arxiv = "^1.4.3"
click = "^8.1.3"
termcolor = "^2.2.0"
appdirs = "^1.4.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arxiv = 'arxivterminal.cli:cli'
